@@ -1,5 +1,7 @@
 ---
 * [Bug 3144] NTP does not build without openSSL <perlinger@ntp.org>
+* [Bug 3363] Support for openssl-1.1.0 without compatibility modes
+  - rework of patch set from <ntp.org@eroen.eu> <perlinger@ntp.org>
 
 ---
 (4.2.8p9) 2016/11/21 Released by Harlan Stenn <stenn@ntp.org>
